[package]
name = "ppg-web"
description = "Generate a five word passphrase with WASM."
version = "0.1.0"
edition = "2021"
authors = ["Nathaniel Knight <nathaniel.ep@gmail.com>"]
license = "MPL-2.0"
repository = "https://gitub.com/nathanielknight/ppg-web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "*"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
